FIX: in settings list of links scrollbar show always

--- a/src/styles/components/settings/_nav.scss
+++ b/src/styles/components/settings/_nav.scss
@@ -23,6 +23,19 @@
       @include media-breakpoint-down($desktop-breakpoint) {
         overflow: visible !important;
       }
+
+      .ps {
+
+        &__rail-y {
+          opacity: .6;
+          margin-top: 4px;
+          margin-bottom: 4px;
+        }
+
+        &__thumb-y {
+          right: 4px;
+        }
+      }
     }
   }
 }
